frontend: fix sideBar z-index

--- a/packages/frontend/src/views/EspacePerso/components/SideBar/SideBarEspacePerso.module.css
+++ b/packages/frontend/src/views/EspacePerso/components/SideBar/SideBarEspacePerso.module.css
@@ -3,7 +3,8 @@
   min-height: 500px;
   border: 1px solid var(--borderColor);
   border-radius: 10px;
-  /* background-color: var(--secondaryBackground); */
+  background-color: var(--backgroundColor);
+  z-index: 1;
   box-shadow: 0px 4px 18px 0px rgba(0, 0, 0, 0.08);
   padding: 10px;
 
